<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.nlp.nirmal.snews.MainActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/titleStr"
        android:id="@+id/Title"
        android:gravity="center"
        android:layout_alignParentTop="true"
        android:layout_alignRight="@+id/clear"
        android:layout_alignEnd="@+id/clear"
        android:layout_marginTop="43dp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/copyClipStr"
        android:id="@+id/copyClip"
        android:layout_marginTop="39dp"
        android:layout_below="@+id/Title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:onClick="copyOnClick" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editText"
        android:layout_below="@+id/copyClip"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:hint="@string/urlSTR"
        android:gravity="center"/>

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/clearSTR"
        android:id="@+id/clear"
        android:layout_above="@+id/editText"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/copyClip"
        android:layout_toEndOf="@+id/copyClip"
        android:onClick="clearOnClick" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sumSTR"
        android:id="@+id/submit"
        android:layout_below="@+id/editText"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/clear"
        android:layout_alignEnd="@+id/clear"
        android:onClick="sumOnClick" />
</RelativeLayout>
